--- a/src/index.html
+++ b/src/index.html
@@ -12,45 +12,56 @@
     <title>Yoo-Math</title>
   </head>
   <body>
-    <div id="menu-bar">
-      <div class="left">
-        <img src="assets/img/logo-small.png" alt="Yoo-Math" />
+    <div id="top-bar">
+      <div>
+        <button class="topbar-btn" id="home-btn" title="Yoo-Math homepage"><img src="assets/img/logo-small.png" alt="Yoo-Math" /></button>
       </div>
-      <div class="right">
-        <button class="menubar-btn" id="minimize-btn" title="Minimize">—</button>
-        <button class="menubar-btn" id="close-btn" title="Close">✕</button>
+      <div>
+        <button class="topbar-btn" id="minimize-btn" title="Minimize">—</button>
+        <button class="topbar-btn" id="close-btn" title="Close">✕</button>
       </div>
     </div>
     <div class="container">
+      <div id="menu-bar">
+        <button class="menubar-btn" id="about-btn" title="About Yoo-Math"><img src="assets/img/info-small.png" alt="Info" /></button>
+        <button class="menubar-btn" id="pin-btn" title="Pin Yoo-Math to screen">📍</button>
+      </div>
+      <div id="last-calculation"></div>
+      <br>
       <div id="box"></div>
-      <br><br>
+      <br>
       <table>
         <tbody>
           <tr>
+            <td><button class="cal-btn-function" id="__function-square" title="Square"><i>x</i><sup>2</sup></button></td>
             <td><button class="cal-btn-symbol" id="__symbol-left-parenthesis" title="Left parenthesis">(</button></td>
             <td><button class="cal-btn-symbol" id="__symbol-right-parenthesis" title="Right parenthesis">)</button></td>
             <td><button class="cal-btn-clear" id="__clear" title="Clear">C</button></td>
             <td><button class="cal-btn-equals" id="__equals" title="Equals (Calculate)">=</button></td>
           </tr>
           <tr>
+            <td><button class="cal-btn-function" id="__function-square-root" title="Square root">√<i>x</i></button></td>
             <td><button class="cal-btn" id="__number-7" title="7" title="Seven">7</button></td>
             <td><button class="cal-btn" id="__number-8" title="8" title="Eight">8</button></td>
             <td><button class="cal-btn" id="__number-9" title="9" title="Nine">9</button></td>
             <td><button class="cal-btn-operation" id="__operation-add" title="Add">+</button></td>
           </tr>
           <tr>
+            <td><button class="cal-btn-function" id="__function-one-divided-by" title="One divided by">1/<i>x</i></button></td>
             <td><button class="cal-btn" id="__number-4" title="Four">4</button></td>
             <td><button class="cal-btn" id="__number-5" title="Five">5</button></td>
             <td><button class="cal-btn" id="__number-6" title="Six">6</button></td>
             <td><button class="cal-btn-operation" id="__operation-subtract" title="Subtract">-</button></td>
           </tr>
           <tr>
+            <td><button class="cal-btn-constant" id="__constant-pi" title="π (PI)">π</button></td>
             <td><button class="cal-btn" id="__number-1" title="One">1</button></td>
             <td><button class="cal-btn" id="__number-2" title="Two">2</button></td>
             <td><button class="cal-btn" id="__number-3" title="Three">3</button></td>
             <td><button class="cal-btn-operation" id="__operation-multiply" title="Multiply">×</button></td>
           </tr>
           <tr>
+            <td><button class="cal-btn-constant" id="__constant-e" title="e">e</button></td>
             <td><button class="cal-btn-symbol" id="__symbol-period" title="Period">.</button></td>
             <td><button class="cal-btn" id="__number-0" title="Zero">0</button></td>
             <td><button class="cal-btn-operation" id="__operation-percent" title="Percent">%</button></td>
@@ -58,8 +69,15 @@
           </tr>
         </tbody>
       </table>
+      <div id="notification">
+        <p id="notification-title"></p>
+        <p id="notification-message"></p>
+        <button id="notification-button1">Dismiss</button>
+        <button id="notification-button2"></button>
+      </div>
       <p id="version">—</p>
     </div>
+    <script src="scripts/functions.js"></script>
     <script src="scripts/menu.js"></script>
     <script src="scripts/calculator.js"></script>
     <script src="scripts/buttons.js"></script>
