--- a/src/about.html
+++ b/src/about.html
@@ -23,8 +23,8 @@
     </div>
     <div class="container">
       <div id="menu-bar">
-        <button class="menubar-btn" id="about-btn" title="About Yoo-Math"><img src="assets/img/info-small.png" alt="Info" /></button>
-        <button class="menubar-btn" id="pin-btn" title="Pin Yoo-Math to screen">📍</button>
+        <button class="menubar-btn active" id="about-btn" title="About Yoo-Math"><img src="assets/img/info-small.png" alt="Info" /></button>
+        <button class="menubar-btn" id="pin-btn" title="Pin Yoo-Math to screen"><img src="assets/img/pin-small.png" alt="Pin" /></button>
       </div>
       <h1>About</h1>
       <p>
