--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,7 @@
   <body>
     <div id="top-bar">
       <div>
-        <button class="topbar-btn" id="home-btn" title="Yoo-Math homepage"><img src="assets/img/logo-small.png" alt="Yoo-Math" /></button>
+        <button class="topbar-btn active" id="home-btn" title="Yoo-Math homepage"><img src="assets/img/logo-small.png" alt="Yoo-Math" /></button>
       </div>
       <div>
         <button class="topbar-btn" id="minimize-btn" title="Minimize">—</button>
@@ -24,7 +24,7 @@
     <div class="container">
       <div id="menu-bar">
         <button class="menubar-btn" id="about-btn" title="About Yoo-Math"><img src="assets/img/info-small.png" alt="Info" /></button>
-        <button class="menubar-btn" id="pin-btn" title="Pin Yoo-Math to screen">📍</button>
+        <button class="menubar-btn" id="pin-btn" title="Pin Yoo-Math to screen"><img src="assets/img/pin-small.png" alt="Pin" /></button>
       </div>
       <div id="last-calculation"></div>
       <br>
