--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,6 @@
     <link rel="stylesheet" href="assets/style.css" />
     <link rel="preload" href="assets/fonts/Roboto.woff2" as="font" type="font/woff2" crossorigin>
     <script>
-      const { ipcRenderer } = require('electron');
       let $ = require("jquery");
       let jQuery = $;
     </script>
@@ -13,21 +12,19 @@
   </head>
   <body>
     <div id="top-bar">
-      <div>
-        <button class="topbar-btn active" id="home-btn" title="Yoo-Math homepage"><img src="assets/img/logo-small.png" alt="Yoo-Math" /></button>
-      </div>
+      <div></div>
       <div>
         <button class="topbar-btn" id="minimize-btn" title="Minimize">—</button>
         <button class="topbar-btn" id="close-btn" title="Close">✕</button>
       </div>
     </div>
-    <div class="container">
-      <div id="menu-bar">
-        <button class="menubar-btn" id="about-btn" title="About Yoo-Math"><img src="assets/img/info-small.png" alt="Info" /></button>
-        <button class="menubar-btn" id="pin-btn" title="Pin Yoo-Math to screen"><img src="assets/img/pin-small.png" alt="Pin" /></button>
-      </div>
+    <div id="menu-bar">
+      <button class="menubar-btn active" id="home-btn" title="Yoo-Math homepage"><img src="assets/img/home-small.png" alt="Home" /></button>
+      <button class="menubar-btn" id="about-btn" title="About Yoo-Math"><img src="assets/img/info-small.png" alt="About" /></button>
+      <button class="menubar-btn" id="pin-btn" title="Pin Yoo-Math to screen"><img src="assets/img/pin-small.png" alt="Pin" /></button>
+    </div>
+    <div class="root">
       <div id="last-calculation"></div>
-      <br>
       <div id="box"></div>
       <br>
       <table>
@@ -80,7 +77,7 @@
     <script src="scripts/functions.js"></script>
     <script src="scripts/menu.js"></script>
     <script src="scripts/calculator.js"></script>
-    <script src="scripts/buttons.js"></script>
-    <script src="scripts/shortcuts.js"></script>
+    <script src="scripts/calculator-buttons.js"></script>
+    <script src="scripts/calculator-shortcuts.js"></script>
   </body>
 </html>
