--- a/src/index.html
+++ b/src/index.html
@@ -37,13 +37,13 @@
               <tr>
                 <td>
                   <div class="cal-btn-function-wrapper" aria-label="Power" data-microtip-position="top" role="tooltip">
-                    <button class="cal-btn-function-special" id="__function-power"><i>x</i><sup><i>x</i></sup></button>
+                    <button class="cal-btn-function-special" id="__function-power"><i>x</i><sup><i>y</i></sup></button>
                     <input type="number" class="cal-btn-function-num" id="power-num" min="-999999" max="999999" value="3" />
                   </div>
                 </td>
                 <td>
                   <div class="cal-btn-function-wrapper" aria-label="Root" data-microtip-position="top" role="tooltip">
-                    <button class="cal-btn-function-special" id="__function-root"><i>x</i> √<i>x</i></button>
+                    <button class="cal-btn-function-special" id="__function-root"><i>y</i> √<i>x</i></button>
                     <input type="number" class="cal-btn-function-num" id="root-num" min="-999999" max="999999" value="3" />
                   </div>
                 </td>
