--- a/src/about.html
+++ b/src/about.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="stylesheet" href="assets/style.css" />
-    <link rel="preload" href="assets/fonts/Roboto.woff2" as="font" type="font/woff2" crossorigin>
+    <link rel="preload" href="assets/fonts/Roboto.woff2" as="font" type="font/woff2" crossorigin />
     <script>
       let $ = require("jquery");
       let jQuery = $;
