--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="stylesheet" href="assets/style.css" />
     <link rel="stylesheet" href="assets/calculator.css" />
-    <link rel="preload" href="assets/fonts/Roboto.woff2" as="font" type="font/woff2" crossorigin>
+    <link rel="preload" href="assets/fonts/Roboto.woff2" as="font" type="font/woff2" crossorigin />
     <script>
       let $ = require("jquery");
       let jQuery = $;
@@ -47,6 +47,16 @@
                     <input type="number" class="cal-btn-function-num" id="root-num" min="-999999" max="999999" value="3" />
                   </div>
                 </td>
+              </tr>
+            </tbody>
+          </table>
+          <table>
+            <tbody>
+              <tr>
+                <td><button class="cal-btn-function-trigonometry" id="__function-trigonometry-sine" aria-label="Sine" data-microtip-position="top" role="tooltip"><i>sin</i></button></td>
+                <td><button class="cal-btn-function-trigonometry" id="__function-trigonometry-cosine" aria-label="Cosine" data-microtip-position="top" role="tooltip"><i>cos</i></button></td>
+                <td><button class="cal-btn-function-trigonometry" id="__function-trigonometry-tangent" aria-label="Tangent" data-microtip-position="top" role="tooltip"><i>tan</i></button></td>
+                <td><button class="cal-btn-function-trigonometry" id="__function-trigonometry-cotangent" aria-label="Cotangent" data-microtip-position="top" role="tooltip"><i>cot</i></button></td>
               </tr>
             </tbody>
           </table>
