--- a/src/history.html
+++ b/src/history.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="stylesheet" href="assets/style.css" />
     <link rel="stylesheet" href="assets/history.css" />
-    <link rel="preload" href="assets/fonts/Roboto.woff2" as="font" type="font/woff2" crossorigin>
+    <link rel="preload" href="assets/fonts/Roboto.woff2" as="font" type="font/woff2" crossorigin />
     <script>
       let $ = require("jquery");
       let jQuery = $;
