--- a/src/index.html
+++ b/src/index.html
@@ -56,6 +56,10 @@
                 <td><button class="cal-btn-function-trigonometry" id="__function-trigonometry-sine" aria-label="Sine" data-microtip-position="top" role="tooltip"><i>sin</i></button></td>
                 <td><button class="cal-btn-function-trigonometry" id="__function-trigonometry-cosine" aria-label="Cosine" data-microtip-position="top" role="tooltip"><i>cos</i></button></td>
                 <td><button class="cal-btn-function-trigonometry" id="__function-trigonometry-tangent" aria-label="Tangent" data-microtip-position="top" role="tooltip"><i>tan</i></button></td>
+              </tr>
+              <tr>
+                <td><button class="cal-btn-function-trigonometry" id="__function-trigonometry-cosecant" aria-label="Cosecant" data-microtip-position="top" role="tooltip"><i>csc</i></button></td>
+                <td><button class="cal-btn-function-trigonometry" id="__function-trigonometry-secant" aria-label="Secant" data-microtip-position="top" role="tooltip"><i>sec</i></button></td>
                 <td><button class="cal-btn-function-trigonometry" id="__function-trigonometry-cotangent" aria-label="Cotangent" data-microtip-position="top" role="tooltip"><i>cot</i></button></td>
               </tr>
             </tbody>
